Cleanup & Dependency update (#15)