@@ -7,7 +7,6 @@ import com.github.anjeyy.api.dto.model.DocumentDto;
 import com.github.anjeyy.infrastructure.exception.ResourceNotFoundException;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -18,20 +17,16 @@ public class DocumentService {
     private final DocumentRepository documentRepository;
     private final DocumentDtoMapper documentDtoMapper;
 
-
     public List<DocumentDto> findAllDocuments() {
         List<Document> document = documentRepository.findAll();
 
-        return document.stream()
-                       .map(documentDtoMapper::mapFromDocument)
-                       .collect(Collectors.toList());
+        return document.stream().map(documentDtoMapper::mapFromDocument).toList();
     }
 
     public DocumentDto findDocumentById(UUID id) {
-        Document document = documentRepository.findById(id)
-                                              .orElseThrow(() -> new ResourceNotFoundException(
-                                                  String.format("Document NOT found with ID %s", id))
-                                              );
+        Document document = documentRepository
+            .findById(id)
+            .orElseThrow(() -> new ResourceNotFoundException(String.format("Document NOT found with ID %s", id)));
         return documentDtoMapper.mapFromDocument(document);
     }
 }
